<resources>
    <string name="app_name">Final-Project</string>
    <string name="freezer_choose">Please choose a temperature</string>
    <string name="fridge_choose">Please choose a temperature</string>
    <string name="title_activity_main_toolbar">Final Project</string>
    <string name="autoTemperature">Temperature</string>
    <string name="autoRadioControls">Radio Controls</string>
    <string name="autoGPSDirections">GPS Directions</string>
    <string name="autoLights">Lights</string>
    <string name="autoSettingsHistory">Settings History</string>
    <string name="autoTemperatureHint">Temperature you want</string>
    <string name="autoSubmit">SUBMIT</string>
    <string name="autoCurrentTemp">Current temperature: </string>
    <string name="autoMaxTemp">Maximum temperature: </string>
    <string name="autoMinTemp">Minimum temperature: </string>
    <string name="autoStation1">station 1</string>
    <string name="autoStation2">station 2</string>
    <string name="autoStation3">station 3</string>
    <string name="autoStation4">station 4</string>
    <string name="autoStation5">station 5</string>
    <string name="autoStation6">station 6</string>
    <string name="autoMute">MUTE</string>
    <string name="autoLightTurnOff">Turn Off</string>
    <string name="autoLightNormal">Normal</string>
    <string name="autoLightHigh">High</string>
    <string name="autoLightDim">Dimmable Light</string>
    <string name="autoDel">DELETE</string>
    <string name="autoUpdate">UPDATE</string>
    <string name="autoAdd">ADD</string>
    <string name="autoRadioNum">Radio Number</string>
    <string name="autoSubmitSuccessful">submit successful</string>
    <string name="autoCancel">CANCEL</string>
    <string name="autoOK">OK</string>
    <string name="autoDatabaseLightTurnOff">light turn off</string>
    <string name="autoDatabaseLightNormal">normal light</string>
    <string name="autoDatabaseLightHigh">high light</string>
    <string name="autoDatabaseDimLightTurnOn">dimmable light turn on</string>
    <string name="autoDatabaseDimLightTurnOff">dimmable light turn off</string>
    <string name="autoDelMessage">Do you want to delete it?</string>

    <string name="AddSetting">Add Setting</string>
    <string name="SnackBar">Welcome!</string>
    <string name="GoBack">Go Back</string>
    <string name="Light">Light</string>
    <string name="GarageDoor">Garage Door</string>
    <string name="TestToolbar">Test Toolbar</string>
    <string name="Database">Scheduled Temperature (Database)</string>
    <string name="load">Start to load</string>
    <string name="current">Current Temperature</string>
    <string name="min">Min Temperature</string>
    <string name="max">Max Temperature</string>
    <string name="FragmentTest">Fragment Test</string>
    <string name="ScheduledTime">Scheduled Time: </string>
    <string name="Time">Time</string>
    <string name="HouseTemperature">House Temperature: </string>
    <string name="Temperature">Temperature</string>
    <string name="RemoveSetting">Remove Setting</string>
    <string name="UpdateSetting">Update Setting</string>
    <string name="Garage">Garage</string>
    <string name="HouseTem">House Temperature</string>
    <string name="OutsideWeather">Outside Weather</string>
    <string name="Change">Change</string>
    <string name="Back">Back</string>
    <string name="Ask">Enter garage?</string>
    <string name="OK">Yes</string>
    <string name="Cancel">No</string>
    <string name="GotoGarage">Go to Garage</string>
    <string name="SetHouseTemperature">Set House Temperature</string>
    <string name="TurnOn">Turn the Light On</string>
    <string name="TurnOff">Turn the Light Off</string>
    <string name="DoorOpen">Garage Door Open</string>
    <string name="DoorClose">Garage Door Close</string>
    <string name="HouseHelp">Help</string>
    <string name="HouseHelp1">Author: Di Yuan</string>
    <string name="HouseHelp2">Version: 1.0.0</string>
    <string name="HouseHelp3">Instruction For House Setting</string>
    <string name="HouseHelp4">Garage: control garage door and light</string>
    <string name="HouseHelp5">Temperature: set house temperature</string>
    <string name="HouseHelp6">Weather: check outside weather</string>
    <string name="HouseHelpOK">OK</string>


    <string name="autoDelMessage">Do you want to delete it?</string>

    <string name="enter_add">Enter device setting value</string>
    <string name="add_button">Add</string>
    <string name="enter_name">Enter device name</string>
    <string name="fridge_save">Save setting</string>
    <string name="light_sh">Light ON/OFF</string>
    <string name="dim_light">Enter dimmable value</string>
    <string name="dim">Dim Light</string>
    <string name="cook_time">cooking time (seconds)</string>
    <string name="b_reset">Reset</string>
    <string name="b_start">Start</string>
    <string name="b_stop">Stop</string>
    <string name="b_set">Set time</string>
    <string name="b_change_m">Save change</string>
    <string name="b_ad">Add Device</string>
    <string name="t_on">Light ON</string>
    <string name="t_off">Light OFF</string>
    <string name="dim_save">Save change</string>

    <string name="title_activity_auto_toolbar">AutoToolbar</string>


</resources>
