<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_automobile_temperature"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamwork.final_project.AutomobileTemperature">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tempTxt"
        android:hint="@string/autoTemperatureHint" />

    <Button
        android:text="@string/autoSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tempTxt"
        android:layout_alignParentStart="true"
        android:id="@+id/tempBtn" />


    <TextView
        android:text="@string/autoCurrentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/temp"
        android:layout_alignParentStart="true"
        android:id="@+id/autoCurrentTemp" />

    <TextView
        android:text="@string/autoMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/min"
        android:layout_alignParentStart="true"
        android:id="@+id/autoMinTemp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/max"
        android:layout_below="@+id/min"
        android:layout_toEndOf="@+id/autoMaxTemp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/min"
        android:layout_below="@+id/temp"
        android:layout_toEndOf="@+id/autoMinTemp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/temp"
        android:layout_below="@+id/tempBtn"
        android:layout_toEndOf="@+id/autoCurrentTemp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/progressBar"
        android:layout_below="@+id/autoMaxTemp"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/autoMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/autoMaxTemp"
        android:layout_alignBaseline="@+id/max"
        android:layout_alignBottom="@+id/max"
        android:layout_alignParentStart="true" />
</RelativeLayout>
